# Morpher_DFG_Generator

./: .gitignore  CMakeLists.txt  README.md  TIPS  cgraedgeports.txt  hello.c  main_minus1.c  morpho_filtering.c  run_pass.sh
adpcm/: adpcm_gvn.ll  run_pass_adpcm.sh
aes/: aes.bc  compilebc.sh
applications/: run_morpher_dfg_generator.py
applications/aes/: Makefile  aes.c  aes.h  aestab.h  output_small.enc
applications/array_add/: array_add.c  run_pass.sh
applications/conv2D/: convolution2d.c  convolution2d_INNERMOST_LN1_PartPredDFG.dot  convolution2d_INNERMOST_LN1_PartPred_DFG.xml  convolution2d_INNERMOST_LN1_PartPred_DFG_forclustering.xml  convolution2d_less_unroll_INNERMOST_LN1_PartPred_DFG.xml  convolution2d_less_unroll_INNERMOST_LN1_PartPred_DFG_forclustering.xml  run_pass.sh
applications/cordic/: DFG.xml  cordic.c  cordic.h  cordic_INNERMOST_LN1_PartPredDFG.dot  cordic_INNERMOST_LN1_PartPred_DFG_forclustering_no_xyz_be_uf_8.xml  cordic_INNERMOST_LN1_PartPred_DFG_no_xyz_be_uf_8.xml  run_pass.sh
applications/edn/: DFG.xml  DFG_forclustering.xml  cfg.jpegdct.dot  jpegdct_POST_LN111_PartPredDFG.dot  jpegdct_POST_LN111_PartPred_DFG.xml  jpegdct_POST_LN111_PartPred_DFG_1.xml  jpegdct_unrolled_3_POST_LN111_PartPred_DFG.xml  jpegdct_unrolled_3_POST_LN111_PartPred_DFG_forclustering.xml  libedn.c  run_pass.sh
applications/fir/: fir.c  fir_filter_INNERMOST_LN11_PartPred_DFG.xml  fir_filter_INNERMOST_LN11_PartPred_DFG_forclustering.xml  fir_filter_unrolled_2_INNERMOST_LN11_PartPred_DFG.xml  fir_filter_unrolled_2_INNERMOST_LN11_PartPred_DFG_forclustering.xml  rem_fir.h  run_pass.sh
applications/fpga_evaluation/: readme.md
applications/gemm/: run_pass.sh
applications/hpcg/: hpcg.c  run_pass.sh
applications/idctcols/: idctCols_unrolled_2_INNERMOST_LN1_PartPred_DFG_forclustering_removed_falselsdep.xml  idctCols_unrolled_2_INNERMOST_LN1_PartPred_DFG_removed_falselsdep.xml  run_pass_unrolled.sh
applications/idctrows/: DFG.xml  idctCols_INNERMOST_LN1_PartPred_DFG_removed_falselsdep.xml  run_pass.sh
applications/invertmat/: invert_matrix_general.c  invert_matrix_general_INNERMOST_LN1_PartPred_DFG.xml  invert_matrix_general_more_unrolled_INNERMOST_LN1_PartPred_DFG.xml  run_pass.sh  (+3 more)
array_add/: array_add.c  run_pass.sh
fft/: fourierf_gvn.ll  run_pass_fft.sh
gemm/: history.txt  run_pass.sh
pedometer/: pedometer_INNERMOST_LN1_mem_alloc.txt  run_pass.sh
skeleton/: CGRA.cpp  CGRA.h  CGRANode.cpp  CGRANode.h  CMakeLists.txt  CMakeLists.txt~  DFGBrMap.cpp  DFGBrMap.h  DFGDISE.cpp  DFGDISE.h  DFGFullPred.cpp  DFGFullPred.h  DFGPartPred.cpp  DFGPartPred.h  DFGTrMap.cpp  DFGTrMap.h  DFGTrig.cpp  DFGTrig.h  Skeleton.cpp  astar.cpp  astar.h  clusternode.cpp  clusternode.h  dfg.cpp  dfg.h  dfgnode.cpp  dfgnode.h  edge.cpp  edge.h
skeleton/instrumentation/: instrumentation.cpp  instrumentation.h
src/: CMakeLists.txt  dfggenPass.cpp
src/arch/: CGRA.cpp  CGRANode.cpp
src/common/: astar.cpp  dfg.cpp  dfgnode.cpp  edge.cpp
src/dfg/: DFGBrMap.cpp  DFGCgraMe.cpp  DFGDISE.cpp  DFGFullPred.cpp  DFGOpenCGRA.cpp  DFGPartPred.cpp  DFGTrMap.cpp  DFGTrig.cpp
src/instrumentation/: instrumentation.cpp
src/util/: tinyxml2.cpp
(+1705 files in other folders)
